# routine-automation

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
autozeug/: courses.py  docs.py  sanitizing.py  telegram.py  video.py  yoga.py
