[project]
name = "routine-automation-tools"
version = "0.1.0"
description = "my-os-tools"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "click>=8.0",
    "unidecode>=1.3",
    "telethon>=1.27.0",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
]

[project.scripts]
sanitize-filenames = "myostools.sanitizing:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
