[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    # "UP",  # pyupgrade
    # "B",   # bugbear
    # "C90", # mccabe
    # "D",  # pydocstyle
    "ERA",  # eradicate
]
ignore = [
    "E203",
    # "W503",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[project]
name = "routine-automation-tools"
version = "0.1.0"
description = "my-os-tools"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "click>=8.0",
    "unidecode>=1.3",
    "telethon>=1.27.0",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
    "ffmpeg-python",
]

[project.scripts]
sanitize-filenames = "myostools.sanitizing:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
